# aws-iatk

./: .gitignore  .golangci.yml  .mockery.yaml  404.html  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES  go.mod  go.sum  index.html  mkdocs.yml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.yml  Feature_request.yml
.github/workflows/: build-wheel.yml  ci.yml  codeql.yml  docs.yml  nightly.yml  pr-integ-tests.yml  quality-check.yml  release-python-client.yml  release.yml  reusable_integ-tests.yml  reusable_quality-check.yml  reusable_release-python-client.yml
01-cfn_utils/: test_example_01.py
02-eb_listener/: package-lock.json
02-eb_listener/cdk/: cdk.json  package.json
03-xray_trace_tree/: package-lock.json
03-xray_trace_tree/cdk/: package-lock.json
04-event_generation/: package-lock.json
api/python/: aws_iatk.html  index.html  search.js
cmd/ctk/: main.go
code_of_conduct/: index.html
docs/: code_of_conduct.md  index.md  security.md
examples/: README.md  requirements.txt
integration/: cli_test.go
python-client/: Makefile  README.md  build-linux.sh  pyproject.toml  setup.py
python-client/src/aws_ctk/: __init__.py  add_eb_listener.py  generate_mock_event.py  get_physical_id_from_stack.py  get_stack_outputs.py  get_trace_tree.py  jsonrpc.py  poll_events.py  remove_listeners.py  retry_xray_trace.py  version.py  xray.py
python-client/src/aws_iatk/: __init__.py  add_eb_listener.py  context_generation.py  generate_mock_event.py  get_physical_id_from_stack.py  get_stack_outputs.py  get_trace_tree.py  jsonrpc.py  poll_events.py  remove_listeners.py  retry_xray_trace.py  version.py
python-client/src/zion/: __init__.py  add_eb_listener.py  generate_mock_event.py  get_physical_id_from_stack.py  get_stack_outputs.py  get_trace_tree.py  jsonrpc.py  poll_events.py  remove_listeners.py  retry_xray_trace.py  version.py  xray.py
python-client/tests/contract/: test_client.py
python-client/tests/integration/decorator/: test_retry_until.py
python-client/tests/integration/event_generation/: test_generate_mock_event.py
python-client/tests/integration/event_generation/testdata/: test_stack.yaml
python-client/tests/integration/retry_fetch_trace/: test_retry_fetch_until.py
python-client/tests/integration/retry_fetch_trace/testdata/: helloworld.py
python-client/tests/integration/test_harness/eventbridge/poll_events/: test_wait_until_event_matched.py
python-client/tests/integration/xray_tracing/: test_xray_tracing_header_injection.py
python-client/tests/unit/: test_eb_context.py  test_iatk_client.py  test_parameter_overrides.py  test_retry_until.py  test_zion_client.py
schema/: rpc-specs.json  rpc_methods.schema.json
search/: search_index.json
security/: index.html
tutorial/: index.html
(+133 files in other folders)
