[build-system]
requires = ["setuptools", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "zion"
dynamic = ["version"]
dependencies = []
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
version = {attr = "zion.version._version"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zion_service = ["*"]
zion_src = ["**", "go.mod", "go.sum"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-xdist",
  "boto3",
  "parameterized",
  "black"
]

[pytest]
log_cli = true
log_cli_level = "DEBUG"
